# yetanotherspdnet

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  docs.yml  sync-to-production.yml  test-and-coverage.yml  tests.yml
docs/: api.md  conf.py  contributing.md  index.md  installation.md  quickstart.md  requirements.txt
docs/autoapi/yetanotherspdnet/: index.rst
docs/autoapi/yetanotherspdnet/functions/: index.rst
docs/autoapi/yetanotherspdnet/functions/spd_geometries/: index.rst
docs/autoapi/yetanotherspdnet/functions/spd_geometries/affine_invariant/: index.rst
docs/autoapi/yetanotherspdnet/functions/spd_geometries/kullback_leibler/: index.rst
docs/autoapi/yetanotherspdnet/functions/spd_geometries/kullback_leibler_symmetrized/: index.rst
docs/autoapi/yetanotherspdnet/functions/spd_geometries/log_euclidean/: index.rst
docs/autoapi/yetanotherspdnet/functions/spd_linalg/: index.rst
docs/autoapi/yetanotherspdnet/functions/stiefel/: index.rst
docs/autoapi/yetanotherspdnet/model/: index.rst
docs/autoapi/yetanotherspdnet/nn/: index.rst
docs/autoapi/yetanotherspdnet/nn/base/: index.rst
docs/autoapi/yetanotherspdnet/nn/batchnorm/: index.rst
docs/autoapi/yetanotherspdnet/nn/parametrizations/: index.rst
docs/autoapi/yetanotherspdnet/random/: index.rst
docs/autoapi/yetanotherspdnet/random/spd/: index.rst
docs/autoapi/yetanotherspdnet/random/stiefel/: index.rst
src/dataloader/: fusar_dataloader.py  hdm05_dataloader.py  hyperleaf_dataloader.py  meta_dataloader.py  rices90_dataloader.py  s1slc_zarr_dataloader.py  tengeop_dataloader.py
src/dataloader/.old/: data.py
src/dataloader/utils/: extract_real_imag_dataset.py  generate_performance_tables.py
src/evaluation/backbone/config/fusar/: cnn_fusar.yaml  cnnspdnet_fusar.yaml  efficientnetb0spdnet_fusar.yaml  resnet18spdnet_fusar.yaml
src/evaluation/backbone/config/s1slc/: cnn_s1slc.yaml  cnnspdnet_s1slc.yaml  efficientnetb0spdnet_s1slc.yaml  mobilenetv3largespdnet_s1slc.yaml  resnet18spdnet_s1slc.yaml
src/evaluation/backbone/config/tengeop/: cnn_tengeop.yaml  cnnspdnet_tengeop.yaml  efficientnetb0spdnet_tengeop.yaml  mobilenetv3largespdnet_tengeop.yaml  resnet18spdnet_tengeop.yaml
src/evaluation/no_backbone/config/: spdnet_hyperleaf.yaml
src/evaluation/no_backbone/config/.old/: run_grid_search_2_batchsize.sh
src/utils/: config.py  linalg.py  metrics.py  plotting.py  precompute_covariances_hyperleaf.py  precompute_covariances_rices.py  rich_logging.py  scheduler.py  training.py  utils.py
src/yetanotherspdnet/: __init__.py  means.py  meta_models.py  model.py  models.py  nn.py  spd.py  stiefel.py
src/yetanotherspdnet/functions/: __init__.py  scalar_functions.py  spd_linalg.py  stiefel.py
src/yetanotherspdnet/functions/spd_geometries/: __init__.py  affine_invariant.py  kullback_leibler.py  kullback_leibler_symmetrized.py  log_euclidean.py
src/yetanotherspdnet/nn/: __init__.py  base.py  batchnorm.py  parametrizations.py
src/yetanotherspdnet/random/: __init__.py  spd.py  stiefel.py
tests/: conftest.py  test_means.py  test_model.py  test_simple.py  test_spd.py  utils.py
tests/functions/: test_spd_linalg.py  test_stiefel.py
tests/functions/spd_geometries/: test_adaptive_gah.py  test_affine_invariant.py  test_kullback_leibler.py  test_kullback_leibler_symmetrized.py  test_log_euclidean.py
tests/nn/: test_base.py  test_batchnorm.py  test_parametrizations.py
