[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yetanotherspdnet"
version = "0.1.0"
description = "Yet Another SPDNet - Production Package"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools]
packages = ["yetanotherspdnet"]

[tool.setuptools.package-dir]
yetanotherspdnet = "src/yetanotherspdnet"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
